src/coreclr/tests/src/Loader/classloader/generics/Instantiation/Negative/param08.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="param08.il" />
  </ItemGroup>
</Project>
